<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeadActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/leadicons_marginbottom" >

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="@dimen/leadicon_width"
            android:layout_height="@dimen/leadicon_height"
            android:layout_margin="@dimen/leadicon_margin"
            android:contentDescription="@string/leadtext_description1"
            android:src="@drawable/adware_style_default" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="@dimen/leadicon_width"
            android:layout_height="@dimen/leadicon_height"
            android:layout_margin="@dimen/leadicon_margin"
            android:contentDescription="@string/leadtext_description2"
            android:src="@drawable/adware_style_default" />

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="@dimen/leadicon_width"
            android:layout_height="@dimen/leadicon_height"
            android:layout_margin="@dimen/leadicon_margin"
            android:contentDescription="@string/leadtext_description3"
            android:src="@drawable/adware_style_default" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/leadskip_marginright"
        android:layout_marginTop="@dimen/leadskip_margintop"
        android:text="@string/lead_skiptext"
        android:textStyle="bold" />

</RelativeLayout>